5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1692_1107.log
== SUBMITION (2019-05-02 16:54:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo Y")
elif(y==0)and(x!=0):
	print("Eixo X")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.203754
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
Q1
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Q1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:05:55) 
-- CODE:
x=int(input("numero     "))
y=int(input("futuro     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==0):
elif((x+y)%(7)==1):
	print("Hoje eh quinta e o dia futuro eh segunda")
	
-- ERROR:
File "XXXX", line 7
    elif((x+y)%(7)==1):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:07:58) 
-- CODE:
x=int(input("numero     "))
y=int(input("futuro     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==0)and((x+y)%(7)==1):
			print("Hoje eh quinta e o dia futuro eh segunda")
	
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:08:07) 
-- CODE:
x=int(input("numero     "))
y=int(input("futuro     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==0)and((x+y)%(7)==1):
			print("Hoje eh quinta e o dia futuro eh segunda")
	
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:15:12) 
-- CODE:
x=int(input("numero     "))
y=int(input("futuro     "))
0="domingo"
1="segunda"
2="terca"
3="quarta"
4="quinta"
5="sexta"
6="sabado"
if(x!=0)or(x!=1)or(x!=2)or(x!=3)or(x!=4)or(x!=5)or(x!=6)or
	prit("A entrada",x, "eh invalida")
else:
	print("hdhhdh",x)
-- ERROR:
File "XXXX", line 10
    if(x!=0)or(x!=1)or(x!=2)or(x!=3)or(x!=4)or(x!=5)or(x!=6)or
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:16:20) 
-- CODE:
x=int(input("numero     "))
y=int(input("futuro     "))
0="domingo"
1="segunda"
2="terca"
3="quarta"
4="quinta"
5="sexta"
6="sabado"
if(x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6):
	prit("A entrada",x, "eh invalida")
else:
	print("hdhhdh",x)
-- ERROR:
File "XXXX", line 3
    0="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:17:08) 
-- CODE:
x=int(input("numero     "))
y=int(input("futuro     "))
0="domingo"
1="segunda"
2="terca"
3="quarta"
4="quinta"
5="sexta"
6="sabado"
if(x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6):
	prit("A entrada",x, "eh invalida")
else:
	print("hdhhdh",x)
-- ERROR:
File "XXXX", line 3
    0="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:20:07) 
-- CODE:
x=int(input("numero     "))

0="domingo"
1="segunda"
2="terca"
3="quarta"
4="quinta"
5="sexta"
6="sabado"
if(x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6):
	prit("A entrada",x, "eh invalida")
else:
	print("hdhhdh",x)
-- ERROR:
File "XXXX", line 3
    0="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:20:30) 
-- CODE:
x=int(input("numero     "))

0=("domingo")
1="segunda"
2="terca"
3="quarta"
4="quinta"
5="sexta"
6="sabado"
if(x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6):
	prit("A entrada",x, "eh invalida")
else:
	print("hdhhdh",x)
-- ERROR:
File "XXXX", line 3
    0=("domingo")
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:25:17) 
-- CODE:
x=int(input("numero "))

0="domingo"
1="segunda"
2="terca"
3="quarta"
4="quinta"
5="sexta"
6="sabado"
if(x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6):
	prit("A entrada",x, "eh invalida")
else:
	print("hdhhdh",x)
-- ERROR:
File "XXXX", line 3
    0="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:53:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
z=x+y
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==0):
		if((z)%(7))==0:
			print("Hoje eh domingo e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh domingo e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh domingo e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh domingo e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh domingo e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh domingo e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh domingo e o dia futuro eh sabado")
	elif(x==1):
		if((z)%(7))==0:
			print("Hoje eh segunda e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh segunda e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh segunda e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh segunda e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh segunda e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh segunda e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh segunda e o dia futuro eh sabado")
	elif(x==2):
		if((z)%(7))==0:
			print("Hoje eh terca e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh terca e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh terca e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh terca e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh terca e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh terca e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh terca e o dia futuro eh sabado")
	elif(x==3):
		if((z)%(7))==0:
			print("Hoje eh quarta e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh quarta e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh quarta e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh quarta e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh quarta e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh quarta e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh quarta e o dia futuro eh sabado")
	elif(x==4):
		if((z)%(7))==0:
			print("Hoje eh quinta e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh quinta e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh quinta e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh quinta e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh quinta e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh quinta e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh quinta e o dia futuro eh sabado")
	elif(x==5):
		if((z)%(7))==0:
			print("Hoje eh sexta e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh sexta e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh sexta e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh sexta e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh sexta e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh sexta e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh sexta e o dia futuro eh sabado")
	elif(x==6):
		if((z)%(7))==0:
			print("Hoje eh sabado e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh sabado e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh sabado e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh sabado e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh sabado e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh sabado e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh sabado e o dia futuro eh sabado")
-- EXECUTION TIME:
0.167806
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada  9  eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
